<resources>
    <string name="app_name">每日支出</string>

    <string name="sure">确认</string>
    <string name="cancel">确认</string>
    <string name="know">知道了</string>
    <string name="account">金额</string>
    <string name="desc">描述</string>
    <string name="label">标签</string>
    <string name="money_unit">￥</string>

    <string-array name="suggest_label">
        <item>早餐</item>
        <item>午餐</item>
        <item>晚餐</item>
        <item>网络购物</item>
        <item>超市购物</item>
    </string-array>

    <string name="nav_tip">记录每一笔支出</string>
    <string name="nav_bill">我的账单</string>
    <string name="nav_label">我的标签</string>
    <string name="nav_favor">常用支出</string>
    <string name="nav_data">数据迁移</string>
    <string name="nav_group_user">用户管理</string>
    <string name="nav_user_add">新增用户</string>
    <string name="nav_user_change">切换用户</string>
    <string name="nav_about">关于</string>

    <string name="main_total_today">今日累计</string>
    <string name="main_total_month">本月累计</string>
    <string name="main_label_tip">从下方选择标签</string>
    <string name="main_label_tip2">我的标签</string>
    <string name="main_today_list">今日支出</string>
    <string name="main_reset">重置</string>
    <string name="main_add">记一笔</string>
    <string name="main_money_tip">请输入金额</string>
    <string name="main_shortcut_tip">试一试点击和长按以下常用支出项。</string>
    <string name="main_invalidate_favor">该条常用支出数据无效</string>

    <string name="user_add">新增用户</string>
    <string name="user_edit">编辑用户</string>
    <string name="user_add_hint">请输入一个昵称</string>
    <string name="user_change">选择用户</string>
    <string name="user_delete">删除用户</string>
    <string name="user_delete_confirm">确认删除此用户？</string>
    <string name="user_delete_refused">此用户为登录用户，不能删除</string>
    <string name="user_auto_change">使用新用户登录</string>

    <string name="label_add">新增标签</string>
    <string name="label_edit">编辑标签</string>
    <string name="label_delete">删除标签</string>
    <string name="label_add_hint">请输入标签名称</string>

    <string name="favor_add">新增常用支出</string>
    <string name="favor_edit">编辑常用支出</string>
    <string name="favor_delete">删除常用支出</string>

    <string name="bill_type_week">本周</string>
    <string name="bill_type_month">本月</string>
    <string name="bill_type_year">本年</string>
    <string name="bill_type_custom">自定义</string>

</resources>
