<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bill"
        android:title="@string/nav_bill" />
    <item
        android:id="@+id/label"
        android:title="@string/nav_label" />
    <item
        android:id="@+id/favor"
        android:title="@string/nav_favor" />
    <item
        android:id="@+id/data"
        android:title="@string/nav_data" />
    <item
        android:id="@+id/about"
        android:title="@string/nav_about" />

    <item android:title="@string/nav_group_user">
        <menu>
            <item
                android:id="@+id/userChange"
                android:title="@string/nav_user_change" />
            <item
                android:id="@+id/userAdd"
                android:title="@string/nav_user_add" />
        </menu>
    </item>

</menu>